# langchain-exercise

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  pytest.ini
docs/: CONCEPTS.md  UV_GUIDE.md
docs/concepts/: 01_model_basics.md  02_messages.md  03_tool_definition.md  04_basic_agents.md  05_tool_execution.md  06_advanced_tools.md  07_structured_output.md  08_system_prompts.md  09_streaming.md  10_memory_state.md  11_middleware.md  12_advanced_workflows.md  13_document_loading.md  14_text_chunking.md  15_embeddings.md  16_retrieval_chains.md  17_advanced_rag.md  18_evaluation.md  README.md
examples/: data_processor.py  research_assistant.py  weather_agent.py
src/: __init__.py
src/exercises/: 01_CONCLUSIONS.md  01_CONNECTIONS.md  01_model_basics.py  02_CONCLUSIONS.md  02_CONNECTIONS.md  02_messages.py  03_CONCLUSIONS.md  03_CONNECTIONS.md  03_tool_definition.py  04_CONCLUSIONS.md  04_CONNECTIONS.md  04_basic_agents.py  05_CONCLUSIONS.md  05_CONNECTIONS.md  05_tool_execution.py  06_CONCLUSIONS.md  06_CONNECTIONS.md  06_advanced_tools.py  07_CONCLUSIONS.md  07_CONNECTIONS.md  07_structured_output.py  08_CONCLUSIONS.md  08_CONNECTIONS.md  08_system_prompts.py  09_CONCLUSIONS.md  09_CONNECTIONS.md  09_streaming.py  10_CONCLUSIONS.md  10_CONNECTIONS.md  10_memory_state.py  11_CONCLUSIONS.md  11_CONNECTIONS.md  11_middleware.py  12_CONCLUSIONS.md  12_CONNECTIONS.md  12_advanced_workflows.py  13_CONCLUSIONS.md  13_CONNECTIONS.md  13_document_loading.py  14_CONCLUSIONS.md  (+15 more)
src/utils/: __init__.py  helpers.py  hints.py  mock_data.py  test_fixtures.py
tests/: conftest.py  test_01_model_basics.py  test_02_messages.py  test_03_tool_definition.py  test_04_basic_agents.py  test_05_tool_execution.py  test_06_advanced_tools.py  test_07_structured_output.py  test_08_system_prompts.py  test_09_streaming.py  test_10_memory_state.py  test_11_middleware.py  test_12_advanced_workflows.py  test_13_document_loading.py  test_14_text_chunking.py  test_15_embeddings.py  test_16_retrieval_chains.py  test_17_advanced_rag.py  test_18_evaluation.py
